--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
     "@types/node": "8"
   },
   "license": "MIT",
-  "author": "Visual Studio Code Team",
+  "author": "Azure Data Studio Team",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Microsoft/vscode.git"
+    "url": "https://github.com/Microsoft/azuredatastudio.git"
   },
   "bugs": {
-    "url": "https://github.com/Microsoft/vscode-extension-vscode/issues"
+    "url": "https://github.com/Microsoft/azdata-extension-azdata/issues"
   }
 }
