--- a/package.json
+++ b/package.json
@@ -15,17 +15,17 @@
   },
   "dependencies": {
     "glob": "^7.1.2",
-    "mocha": "^4.0.1",
+    "mocha": "^5.2.0",
     "request": "^2.88.0",
     "semver": "^5.4.1",
     "source-map-support": "^0.5.0",
     "url-parse": "^1.4.4",
-    "vscode-test": "^0.1.4"
+    "vscode-test": "^0.4.1"
   },
   "devDependencies": {
     "@types/glob": "^5.0.33",
-    "@types/mocha": "^2.2.43",
-    "@types/node": "8"
+    "@types/mocha": "^5.2.7",
+    "@types/node": "^10.14.8"
   },
   "license": "MIT",
   "author": "Azure Data Studio Team",
